--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,13 @@ cv2_enumerate_cameras==1.1.15
 onnx==1.16.0
 insightface==0.7.3
 psutil==5.9.8
+torch==2.5.1; sys_platform != 'darwin'
+torch==2.5.1; sys_platform == 'darwin'
+torchvision==0.20.1; sys_platform != 'darwin'
+torchvision==0.20.1; sys_platform == 'darwin'
+onnxruntime-silicon==1.16.3; sys_platform == 'darwin' and platform_machine == 'arm64'
+onnxruntime-gpu==1.16.3; sys_platform != 'darwin'
+tensorflow==2.12.1; sys_platform != 'darwin'
 tk==0.1.0
 customtkinter==5.2.2
 pillow==11.1.0
